--- a/SPBE-web/public/documentation/foundation/colors.html
+++ b/SPBE-web/public/documentation/foundation/colors.html
@@ -551,7 +551,7 @@
                   <div class="prop-item-wrap">
                     <div class="prop-item">
                       <div class="label">Hex</div>
-                      <div class="value">#e91e63</div>
+                      <div class="value">#596CFF</div>
                     </div>
                   </div>
                 </div>
